<resources>
    <string name="app_name">Mios</string>
    <string name="nav_characters">Курстар</string>
    <string name="profile">Профиль</string>
    <string name="settings">Баптаулар</string>
    <string name="test">Тест</string>
    <string name="check_internet_connection">Интернет қосылымын тексеріңіз</string>
    <string name="something_went_wrong">Бірдеңе дұрыс болмады</string>
    <string name="characters">Курстар</string>
    <string name="logout_warning">Шығу керек екеніне сенімдісіз бе?</string>
    <string name="character_size">Сіздің курстарыңыздың тізімі (%d)</string>
    <string name="detailed">Detailed Character</string>
    <string name="welcome">Қош келдіңіз!</string>
    <string name="enter_password_and_login">Қосымшаға кіру үшін логин мен құпиясөзді енгізіңіз</string>
    <string name="register">Кіру</string>
    <string name="join">Қалай тіркеледі?</string>
    <string name="your_login">Сіздің логин</string>
    <string name="your_name">Сіздің аты-жөніңіз</string>
    <string name="enter_password">Құпиясөзді енгізіңіз</string>
    <string name="enter_login">Логинді енгізіңіз</string>
    <string name="ok">Түсінікті</string>
    <string name="fill_fields">Жолақтарды толтырыңыз</string>
    <string name="birthday">Тіркелген күні</string>
    <string name="rate_us">Қосымшаны бағалау</string>
    <string name="share_app">Қосымшаны бөлісу</string>
    <string name="error_email_length">Логинді толтырыңыз. Логиннің ұзындығы кем дегенде 4 болу керек</string>
    <string name="error_password_length">Құпиясөзді толтырыңыз. Құпиясөздің ұзындығы кем дегенде 4 болу керек</string>
    <string name="get_courses">Сабақтарға қатысып, барлық тестілерден өтіп, келесі сабақтарға қол жеткізіңіз</string>
    <string name="logout">Шығу</string>
    <string name="back">Артқа</string>
    <string name="end">Аяқтау</string>
    <string name="end_session">Сіздің қосымшаға кіру уақытыңыз бітті. Қайта кіруіңізді сұраймыз.</string>
    <string name="logout_hint">Сіз косымшадан шыққыңыз келе ме?</string>
    <string name="pass_quiz">Тест тапсыру</string>
    <string name="result_place_holder">%1$d/%2$d</string>
    <string name="result_total">Дұрыс жауаптары: %1$d / %2$d</string>
    <string name="excellent">Керемет!</string>
    <string name="good">Жарадыңыз!</string>
    <string name="excellent_result">Алған бетіңізден таймаңыз! Алла Тағала іліміңізді арттырсын!</string>
    <string name="good_result">Сіз ең жоғарғы ұпай жинай аласыз! Тек тағы да кішкене дайындалу керек!</string>
    <string name="go_to_main_page">Басты бетке өту</string>
    <string name="pass_test_again">Тестті қайта тапсыру</string>
    <string name="pass_previous_lesson">Алдыңғы сабақты өтіңіз</string>
    <string name="not_found_whatsapp">Өкінішке орай сізде WhatsApp қосымшасы орнатылмаған. Тіркелу үшін WhatsApp қосымшасын орнатуынызды сұраймыз.</string>
</resources>